k8s/overlays/aws/ingress.aws.patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mk2-ingress
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - www.jsh-ai-dev.com
      secretName: mk2-tls-secret
  rules:
    - host: www.jsh-ai-dev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mk2-web
                port:
                  number: 3000
